[package]
name = "csi-controller"
version = "0.1.0"
authors = ["Mikhail Tcymbaliuk <m.tcymbaliuk@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
awc = "3.0.0-beta.7"
reqwest = { version="0.11.4", features=["json"] }
rustls = "0.19.1"
anyhow = "1.0.43"
once_cell = "1.8.0"
hyper = { version = "0.14", features = ["client"] }
hyper-timeout = "0.4"
hyper-tls = "0.5.0"
common-lib = { path = "../../common" }
git-version = "0.3.4"
http = "0.2.4"
rpc = { path = "../../rpc"}
rest = { path = "../rest" }
structopt = "0.3.11"
tonic = "0.5.2"
async-stream = "0.3.2"
chrono = "0.4.19"
clap = "2.33.3"
env_logger = "0.9.0"
failure = "0.1.8"
futures = { version = "0.3.16", default-features = false }
log = "0.4.14"
prost = "0.8.0"
prost-derive = "0.8.0"
prost-types = "0.8.0"
regex = "1.5.4"
serde_json = "1.0.66"
snafu = "0.6.10"
tokio = { version = "1.10.0", features = ["full"] }
tokio-stream = { version = "0.1.7", features = ["net"] }
tower = "0.4.8"
tracing = "0.1.26"
tracing-futures = "0.2.5"
uuid = "0.5.1"

[dependencies.serde]
features = ["derive"]
version = "1.0.127"